--- a/equipos/almeria/almeria.html
+++ b/equipos/almeria/almeria.html
@@ -85,10 +85,10 @@
         <div class="row mt-5 d-flex justify-content-center">
 
             <div class="col-lg-4 text-center">
-                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorAlaves.png">
+                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorAlmeria.png">
                 </img>
 
-                <h2>Luis Garcia Plaza</h2>
+                <h2>Pepe Mel</h2>
                 <h5>Entrenador</h5>
                 <button class="btn btn-secondary bg-primary eliminarEntrenador">Eliminar entrenador</button>
             </div><!-- /.col-lg-4 -->
@@ -110,7 +110,7 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioSivera.png">
                 </img>
 
-                <h2>Antonio Sivera</h2>
+                <h2>Luís Maximiliano</h2>
                 <h5>Portero</h5>
                 <button class="btn btn-secondary bg-primary eliminarPorteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -118,7 +118,7 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/jesusOwono.png">
                 </img>
 
-                <h2>Jesús Owono</h2>
+                <h2>Fernando Martínez</h2>
                 <h5>Portero</h5>
                 <button class="btn btn-secondary bg-primary eliminarPorteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -136,15 +136,15 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/andoniGorosabel.png">
                 </img>
 
-                <h2>Andoni Gorosabel</h2>
-                <h5>Lateral</h5>
+                <h2>Edgar Gonzaléz</h2>
+                <h5>Defensa Central</h5>
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/rubenDuarte.png">
                 </img>
 
-                <h2>Rubén Duarte</h2>
+                <h2>Alex Pozo</h2>
                 <h5>Lateral</h5>
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -152,8 +152,8 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/sedlar.png">
                 </img>
 
-                <h2>Aleksandar Sedlar</h2>
-                <h5>Defensa central</h5>
+                <h2>Marc Pubill</h2>
+                <h5>Lateral</h5>
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
@@ -167,7 +167,7 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/nahuelTenaglia.png">
                 </img>
 
-                <h2>Nahuel Tenaglia</h2>
+                <h2>Álex Centelles</h2>
                 <h5>Lateral</h5>
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -175,7 +175,7 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
                 </img>
 
-                <h2>Rafa Marín</h2>
+                <h2>Chumi</h2>
                 <h5>Defensa central</h5>
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -183,22 +183,11 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/josedaAlvarez.png">
                 </img>
 
-                <h2>Joseda Álconstez</h2>
+                <h2>César Montes</h2>
                 <h5>Lateral</h5>
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
-
-
-
-            <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/javiLopez.png">
-                </img>
-
-                <h2>Javi Lopez</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
-            </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
 
@@ -214,7 +203,7 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/anderGuevara.png">
                 </img>
 
-                <h2>Ander Guevara</h2>
+                <h2>Iddrisu Baba</h2>
                 <h5>Mediocentro</h5>
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -222,16 +211,16 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioBlanco.png">
                 </img>
 
-                <h2>Antonio Blanco</h2>
-                <h5>Mediocentro defensivo</h5>
+                <h2>Lucas Robertone</h2>
+                <h5>Mediocentro ofensivo</h5>
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/hagi.png">
                 </img>
 
-                <h2>Ianis Hagi</h2>
-                <h5>Extremo</h5>
+                <h2>Dion Lopy</h2>
+                <h5>Defensa Central</h5>
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
@@ -245,7 +234,7 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/guridi.png">
                 </img>
 
-                <h2>Jon Guridi</h2>
+                <h2>Gonzalo Melero</h2>
                 <h5>Mediocentro</h5>
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -253,8 +242,8 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
                 </img>
 
-                <h2>Carlos Benavídez</h2>
-                <h5>Mediocentro</h5>
+                <h2>Sergio Arribas</h2>
+                <h5>Mediocentro ofensivo</h5>
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
@@ -273,7 +262,7 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/luisRioja.png">
                 </img>
 
-                <h2>Luis Rioja</h2>
+                <h2>Largie Ramazani</h2>
                 <h5>Extremo</h5>
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -281,7 +270,7 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/kikeGarcia.png">
                 </img>
 
-                <h2>Kike García</h2>
+                <h2>Luis Suarez</h2>
                 <h5>Delantero centro</h5>
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -289,7 +278,7 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/alkain.png">
                 </img>
 
-                <h2>Xeber Alkain</h2>
+                <h2>Adri Embarba</h2>
                 <h5>Extremo</h5>
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -304,24 +293,24 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
                 </img>
 
-                <h2>Abde Rebbach</h2>
-                <h5>Extremo</h5>
+                <h2>Léo Baptistao</h2>
+                <h5>Delantero centro</h5>
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosVicente.png">
                 </img>
 
-                <h2>Carlos Vicente</h2>
-                <h5>Extremo</h5>
+                <h2>Ibrahima Koné</h2>
+                <h5>Delantero centro</h5>
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/unaiRopero.png">
                 </img>
 
-                <h2>Unai Ropero</h2>
-                <h5>Extremo</h5>
+                <h2>Marezi</h2>
+                <h5>Delantero centro</h5>
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
