--- a/equipos/cadiz/cadiz.html
+++ b/equipos/cadiz/cadiz.html
@@ -144,7 +144,7 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/rubenDuarte.png">
                 </img>
 
-                <h2>Juan Miranda</h2>
+                <h2>Fali</h2>
                 <h5>Lateral</h5>
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -152,7 +152,7 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/sedlar.png">
                 </img>
 
-                <h2>Germán Pezzella</h2>
+                <h2>Victor chust</h2>
                 <h5>Defensa central</h5>
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -167,7 +167,7 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/nahuelTenaglia.png">
                 </img>
 
-                <h2>Marc Bartra</h2>
+                <h2>Momo Mbaye</h2>
                 <h5>Defensa central</h5>
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -175,15 +175,15 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
                 </img>
 
-                <h2>Sokratis</h2>
-                <h5>Defensa Central</h5>
+                <h2>Javi Hernández</h2>
+                <h5>Lateral</h5>
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/josedaAlvarez.png">
                 </img>
 
-                <h2>Abner</h2>
+                <h2>Iza Carcelén</h2>
                 <h5>Lateral</h5>
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -193,23 +193,23 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
                 </img>
 
-                <h2>Sabaly</h2>
-                <h5>Lateral</h5>
+                <h2>Jorge Meré</h2>
+                <h5>Defensa central</h5>
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/josedaAlvarez.png">
                 </img>
 
-                <h2>Aitor Ruibal</h2>
-                <h5>Lateral</h5>
+                <h2>Luis Hernández</h2>
+                <h5>Defensa central</h5>
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/josedaAlvarez.png">
                 </img>
 
-                <h2>Chadi Riad</h2>
+                <h2>Lucas Pires</h2>
                 <h5>Lateral</h5>
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -228,24 +228,24 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/anderGuevara.png">
                 </img>
 
-                <h2>Johnny Cardoso</h2>
-                <h5>Mediocentro</h5>
+                <h2>Fede San Emeterio</h2>
+                <h5>Mediocentro defensivo</h5>
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioBlanco.png">
                 </img>
 
-                <h2>Guido Rodríguez</h2>
-                <h5>Mediocentro defensivo</h5>
+                <h2>José Mari Martín</h2>
+                <h5>Mediocentro</h5>
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/hagi.png">
                 </img>
 
-                <h2>William Carvalho</h2>
-                <h5>Mediocentro defensivo</h5>
+                <h2>Rubén Alcaraz</h2>
+                <h5>Mediocentro</h5>
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
@@ -259,16 +259,33 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/guridi.png">
                 </img>
 
-                <h2>Rodri</h2>
-                <h5>Mediocentro ofensivo</h5>
+                <h2>Álex Fernandez</h2>
+                <h5>Mediocentro</h5>
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
                 </img>
 
-                <h2>Isco</h2>
-                <h5>Mediocentro ofensivo</h5>
+                <h2>Iván Alejo</h2>
+                <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/guridi.png">
+                </img>
+
+                <h2>Rominigue Kouamé</h2>
+                <h5>Mediocentro</h5>
+                <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                </img>
+
+                <h2>Gonzalo Escalante</h2>
+                <h5>Mediocentro</h5>
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
 
@@ -288,15 +305,15 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/luisRioja.png">
                 </img>
 
-                <h2>Nabil Fekir</h2>
-                <h5>Extremo</h5>
+                <h2>Rubén Sobrino</h2>
+                <h5>Delantero centro</h5>
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/kikeGarcia.png">
                 </img>
 
-                <h2>Ayoze Pérez</h2>
+                <h2>Brian Ocampo</h2>
                 <h5>Extremo</h5>
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -304,7 +321,7 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/alkain.png">
                 </img>
 
-                <h2>William José</h2>
+                <h2>Chris ramos</h2>
                 <h5>Delantero centro</h5>
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
@@ -319,8 +336,35 @@
                 <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
                 </img>
 
-                <h2>Assane Diao</h2>
+                <h2>Darwin Machis</h2>
                 <h5>Extremo</h5>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
+                </img>
+
+                <h2>Sergi Guardiola</h2>
+                <h5>Delantero centro</h5>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
+                </img>
+
+                <h2>Roger Martí</h2>
+                <h5>Delantero centro</h5>
+                <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
+            </div><!-- /.col-lg-4 -->
+
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
+                </img>
+
+                <h2>Maxi Gómez</h2>
+                <h5>Delantero centro</h5>
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             
