--- a/equipos/almeria/almeria.html
+++ b/equipos/almeria/almeria.html
@@ -107,7 +107,7 @@
 
         <div class="row text-center">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioSivera.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/luisMaximiano.png">
                 </img>
 
                 <h2>Luís Maximiliano</h2>
@@ -115,7 +115,7 @@
                 <button class="btn btn-secondary bg-primary eliminarPorteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/jesusOwono.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/diegoMariño.png">
                 </img>
 
                 <h2>Fernando Martínez</h2>
@@ -133,7 +133,7 @@
 
         <div class="row text-center" id="defensa">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/andoniGorosabel.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/edgarGonzalez.png">
                 </img>
 
                 <h2>Edgar Gonzaléz</h2>
@@ -141,7 +141,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rubenDuarte.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/alexPozo.png">
                 </img>
 
                 <h2>Alex Pozo</h2>
@@ -149,7 +149,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/sedlar.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/marcPubill.png">
                 </img>
 
                 <h2>Marc Pubill</h2>
@@ -164,7 +164,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/nahuelTenaglia.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/alexCentelles.png">
                 </img>
 
                 <h2>Álex Centelles</h2>
@@ -172,7 +172,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/chumi.png">
                 </img>
 
                 <h2>Chumi</h2>
@@ -180,7 +180,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/josedaAlvarez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/cesarMontes.png">
                 </img>
 
                 <h2>César Montes</h2>
@@ -200,7 +200,7 @@
 
         <div class="row text-center" id="mediocentros">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/anderGuevara.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/iddrisuBaba.png">
                 </img>
 
                 <h2>Iddrisu Baba</h2>
@@ -208,7 +208,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioBlanco.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/lucasRobertone.png">
                 </img>
 
                 <h2>Lucas Robertone</h2>
@@ -216,7 +216,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/hagi.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/dionLopy.png">
                 </img>
 
                 <h2>Dion Lopy</h2>
@@ -231,7 +231,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/guridi.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/gonzaloMelero.png">
                 </img>
 
                 <h2>Gonzalo Melero</h2>
@@ -239,7 +239,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/sergioArribas.png">
                 </img>
 
                 <h2>Sergio Arribas</h2>
@@ -259,7 +259,7 @@
 
         <div class="row text-center" id="delantero">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/luisRioja.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/largieRamazani.png">
                 </img>
 
                 <h2>Largie Ramazani</h2>
@@ -267,7 +267,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/kikeGarcia.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/luisSuarez.png">
                 </img>
 
                 <h2>Luis Suarez</h2>
@@ -275,7 +275,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/alkain.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/adriEmbarba.png">
                 </img>
 
                 <h2>Adri Embarba</h2>
@@ -290,7 +290,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/leoBaptistao.png">
                 </img>
 
                 <h2>Léo Baptistao</h2>
@@ -298,7 +298,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosVicente.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/ibrahimaKone.png">
                 </img>
 
                 <h2>Ibrahima Koné</h2>
@@ -306,7 +306,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/unaiRopero.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/marezi.png">
                 </img>
 
                 <h2>Marezi</h2>
